kubernetes/production/deployment.yaml
---
######## API ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: default
  labels:
    env: production
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        env: production
        app: api
    spec:
      containers:
      - name: api
        image: gcr.io/mee-261822/api:latest
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
---
######## CLIENT ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client
  namespace: default
  labels:
    env: production
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        env: production
        app: client
    spec:
      containers:
      - name: client
        image: gcr.io/mee-261822/client:latest
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
---
######## ELASTICSEARCH ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: default
  labels:
    env: production
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        env: production
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: gcr.io/mee-261822/elasticsearch:latest
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
---
